# StockWish

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  mod.rs  stockwish.rs
src/stockwishbot/: cache.rs  evaluation.rs  mod.rs  move_ordering.rs  statistics.rs  stockwish.rs
