[package]
name = "chessbot"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = "3.2.0"
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["svg"] }
rand = "0.8.5"
time = "0.1.45"
timer = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

